<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan_background"
    tools:context="com.example.gogos.musicapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/itemsStyle"
            android:background="@color/primary_dark_color"
            android:text="@string/main_app_string" />

        <TextView
            android:id="@+id/now_playing_id"
            style="@style/itemsStyle"
            android:background="@color/now_playing_color"
            android:text="@string/now_playing_string" />

        <TextView
            android:id="@+id/albums_id"
            style="@style/itemsStyle"
            android:background="@color/albums_color"
            android:text="@string/albums_string" />

        <TextView
            android:id="@+id/list_artists_id"
            style="@style/itemsStyle"
            android:background="@color/list_artists_color"
            android:text="@string/list_artists_string" />

        <TextView
            android:id="@+id/play_lists_id"
            style="@style/itemsStyle"
            android:background="@color/play_lists_color"
            android:text="@string/play_lists_string" />

        <Button
            android:id="@+id/payment_id"
            style="@style/itemsStyle"
            android:background="@color/PayPal"
            android:text="@string/PayPal_string" />

    </LinearLayout>

</ScrollView>