<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/list_artists_color"
    android:orientation="vertical"
    tools:context="com.example.gogos.musicapp.ListArtists">

    <TextView
        android:id="@+id/now_playing_id"
        style="@style/itemsStyle"
        android:background="@color/now_playing_color"
        android:text="@string/now_playing_string" />

    <TextView
        android:id="@+id/albums_id"
        style="@style/itemsStyle"
        android:background="@color/albums_color"
        android:text="@string/albums_string" />

    <TextView
        android:id="@+id/play_lists_id"
        style="@style/itemsStyle"
        android:background="@color/play_lists_color"
        android:text="@string/play_lists_string" />

    <Button
        android:id="@+id/payment_id"
        style="@style/itemsStyle"
        android:background="@color/PayPal"
        android:text="@string/PayPal_string" />

    <TextView
        android:id="@+id/artist_description_id"
        style="@style/itemsStyle"
        android:text="@string/artist_description" />
</LinearLayout>
